--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Ron Yu's portfolio for web design and development">
   <meta name="author" content="Ron Yu">
+  <meta property="og:image" content="http://rontest.lionfree.net/images/link.png">
 
   <title>Ron Yu | Web portfolio</title>
 
@@ -89,8 +90,8 @@
   <!-- About Section -->
   <section id="about" class="about-section vertical-center">
     <div class="container">
-      <div class="row flex-container">
-        <div class="flex-item leftcolumn">
+      <div class="row">
+        <div class="col-md-4 col-md-offset-2 col-sm-12 col-xs-12 leftcolumn">
           <figure>
             <img src="images/head.jpg"  class="img-circle img-responsive effect2" alt="Ron Yu's picture">
           </figure>
@@ -100,14 +101,14 @@
           </blockquote>
         </div>
 
-        <div class="flex-item rightcolumn">
+        <div class="col-md-4 col-sm-12 col-xs-12 rightcolumn">
           <article>
             <header>
               <h2>About me</h2>
             </header>
             <div class="content">
-              <p>I'm Ron Yu and I come from Taiwan. It's pretty excited to deploy my portfolio website to show you.
-                <br>I'm equipped with general knowledge of <span><strong><em>HTML5</em></strong></span>, <span><strong><em>CSS3</em></strong></span> and <span><strong><em>JavaScript</em></strong></span> for fornt-end web development. Meantime, I also take effort to learn <span><strong><em>Bootstrap</em></strong></span>, <span><strong><em>jQuery</em></strong></span> and <span><strong><em>responsive web deaign</em></strong></span> to make the website more vividly.
+              <p>I'm Ron Yu and I come from Taiwan. I am pretty excited to deploy my portfolio website.
+                <br>I'm equipped with general knowledge of <span><strong><em>HTML5</em></strong></span>, <span><strong><em>CSS3</em></strong></span> and <span><strong><em>JavaScript</em></strong></span> for fornt-end web development. Meantime, I also make effort to learn <span><strong><em>Bootstrap</em></strong></span>, <span><strong><em>jQuery</em></strong></span> and <span><strong><em>responsive web deaign</em></strong></span> to make the website more vividly.
                 <br>Web UI and UX design procress are also my favorite.</p>
             </div>
           </article>
@@ -120,14 +121,14 @@
   <section id="skill" class="skill-section vertical-center">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-3 col-sm-10 col-xs-12">
+        <div class="col-lg-6 col-md-6 col-sm-7 col-xs-12 barcenter">
          <h4>Quality Assessment</h4>
           <div class="row skillitemrow">
             <div class="col-md-3 col-sm-3 col-xs-3">
               <img src="images/skill_logo/HTML5.png" class="img-responsive" alt="HTML5 logo">
             </div>
             <div class="col-md-9 col-sm-9 col-xs-9 choice">
-              <h5>HTML</h5>
+              <h5>HTML5</h5>
               <div class="progress progress-striped active html5bar">
                 <div class="progress-bar six-sec-ease-in-out" role="progressbar" data-transitiongoal="60"></div>
               </div>
@@ -188,7 +189,8 @@
       <div class="row">
         <div class="col-xs-12 col">
           <h2>Get in Touch</h2>
-          <p>Thanks for visiting out my website. If you would like to contact with me, here are the information.</p>
+          <p>Thanks for visiting out my website.</p> 
+          <p class="hidden-xs">Let us make something different, here are my information.</p>
         </div>
       </div>
       <div class="row social-info">
